Realizada melhora de ajustar nome e método do anuncio